@@ -1,3 +1,7 @@
+2000-08-11  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* util/ntp-genkeys.c (main): Progress...
+
 2000-08-06  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* ntpd/check_y2k.c: Make debug definition match ntpd.h's declaration
